discussion/kv_engine/158430/158430_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47197: Set user limits as part of database refresh [4/n]

Unfortunately ns_server isn't able to notify us in a proper way
when a users limit changed, but instead we're being told to
read the entire file and figure it out ourself (it could very
well just be that a new user was added to the system; a users
password change or a user being deleted).

To avoid any race conditions where users connect while we're
performing the update the new database gets installed, and then
we iterate over all of the users in the new database and tries
to update the user.

Any user connecting while we're updating the database will see
the new entry (if they haven't been inserted in the cache already)
and we'll make sure we update all exiting entries in the database.

Change-Id: I24385c32f8efd0925c9a5624a591f18ef19685e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-07-29 16:15:11.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 16:44:20.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10945/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22: error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                     ^~~~~~~~~~~~~~~~
                     servent
/usr/include/netdb.h:255:8: note: "servent" declared here
struct servent
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:40: error: no member named "getUser" in "servent" [clang-diagnostic-error]
    auto userentry = cb::sasl::server::getUser(ident);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10945/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10945/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32541/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant_manager.cc:70:22:
error: no member named "server" in namespace "cb::sasl"; did you mean "servent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32541/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13071/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12535/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12535/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9611/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38167/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11651/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12717/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20618/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/550/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
